--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
+    "antd": "^5.19.3",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.40",
     "react": "^18.3.1",
